Bug 118649 - drag'n'drop of multiple line change line orientation
Summary: drag'n'drop of multiple line change line orientation
Status: RESOLVED FIXED
Alias: None
Product: calligraflow
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Simonsson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-19 17:01 UTC by Yan Morin
Modified: 2005-12-25 10:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yan Morin 2005-12-19 17:01:47 UTC
Version:           1.4.2 (using KDE 3.5.0-2.2.fc4.kde, Fedora Core release 4 (Stentz))
Compiler:          Target: i386-redhat-linux
OS:                Linux (i686) release 2.6.14-1.1644_FC4

How to reproduce:
1. create a line
2. create a second line (diagonal to the first one, not parallel or perpendicular) 
3. select the two lines
4. move the two lines with the mouse (drag'n'drop)

Expected Behaviour:
Move the two lines with the original orientation and in the same position (relatively to where I put them).

Currently:
The lines change orientation and position.

Note:
If you make a cross or a T with the two lines, the drag'n'drop work.
But if you make a X, it will change to a <
Comment 1 Peter Simonsson 2005-12-25 10:24:32 UTC
Thanks for your report. It has been fixed in trunk... will be released with KOffice 1.5