Fix moving of polyline connectors

BUG: 118649

svn path=/trunk/koffice/; revision=491211